newclay/test/Compiler/Propagation/Fail/RefTemporary/main.clay
define main;
overload main() = ref true;

